--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ table {
 h1,.titulo {
   font-size: 1.3rem;
 }
+body{
+    background-image: url("/img/bakcground.jpg");
+}
 
 #container{
     width: 100%;
@@ -58,6 +61,7 @@ h1,.titulo {
     grid-gap: 5px;
     text-align: center;
     padding: 12px;
+    background-color: rgba(243, 226, 71, 0.959);
 }
 table,form,#form input[type="button"],button{
     border: none;
@@ -72,25 +76,28 @@ table,form,#form input[type="button"],button{
 }
 #form input{
     width: 80%;
-    height: 30px;
+    height: 50px;
 }
 
 #form input[type="button"],button{
     width: 80%;
-    height: 40px;
+    height: 60px;
     cursor: pointer;
     background-color: rebeccapurple;
     color: white;
 }
+
 table{
     width: 100%;
     height: auto;
-    background-color: white;
+    background-color: rebeccapurple;;
+    color: white;
     margin: 20px auto;
     padding: 15px;
-    box-shadow: 5px 5px 15px rgb(199, 199, 199);
+    box-shadow: 5px 5px 15px rgb(119, 119, 119);
 }
 
 table td{
     padding: 7px;
+    
 }
